k8s-manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poke-depl
  namespace: pokescale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokescale
  template:
    metadata:
      labels:
        app: pokescale
    spec:
      containers:
        - name: pokescale-cont
          image: ghcr.io/xamma/pokescale:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: port-name
      restartPolicy: Always
