k8s-manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokescale-ingress
  namespace: pokescale
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  ingressClassName: nginx
  rules:
    - host: pokescale.k8sdev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pokescale-svc
                port:
                  number: 8000
  tls:
    - hosts:
        - pokescale.k8sdev.local
      secretName: nginx-tls-secret
